--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,13 @@ pyyaml>=6.0
 
 # Optional dependencies
 # vLLM (for local inference with GPU)
-# vllm>=0.2.0
+vllm>=0.2.0
 
 # Jupyter notebook support
 jupyter>=1.0.0
 ipykernel>=6.0.0
 
 # Development dependencies (optional)
-# pytest>=7.0.0
-# black>=23.0.0
-# mypy>=1.0.0
+pytest>=7.0.0
+black>=23.0.0
+mypy>=1.0.0
